--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/hogwarts
 spring.datasource.username= student
 spring.datasource.password= chocolatefrog
+path.to.avatars.folder= avatars
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
 
-path.to.avatars.folder= /avatars
