--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.username= student
 spring.datasource.password= chocolatefrog
 path.to.avatars.folder= avatars
 
-#spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= update
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
