--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url= jdbc:h2:mem:hogwarts;
-spring.datasource.username= student
-spring.datasource.password= chocolatefrog
+#spring.datasource.url= jdbc:h2:mem:hogwarts;
+#spring.datasource.username= student
+#spring.datasource.password= chocolatefrog
